fix wrap for cart
fix wrap for cart

--- a/Flex/css/style.css
+++ b/Flex/css/style.css
@@ -106,6 +106,7 @@ body {
     flex-direction: row; 
     padding: 20px;
     gap: 20px;
+    flex-wrap: wrap;
 }
 
 .card {
